<?xml version="1.0"?>
<package format="2">
  <name>valkyrie_wholebody_msgs_tests</name>
  <version>0.0.0</version>
  <description>The valkyrie test scripts pacakge package. Forked from https://github.com/ipab-slmc/valkyrie_testing_edi . Modified for the new IHMC interface with an additional suite test capability. </description>

  <maintainer email="stevenjens.m.jorgensen@nasa.gov">Steven Jens Jorgensen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy_message_converter</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>yaml</depend>
  <depend>controller_msgs</depend>
  <depend>val_description</depend>
</package>